
2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Fix SuSE builds.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* configure.in: ppc64 -m64 stuff.
	* include/linux/asmcompat32.h: Lots of CONFIG_COMPAT hacks.
	* kernel/Makefile: Fix CFLAGS.
	* kernel/oracleasm.c: Lots of CONFIG_COMPAT hacks.
	* libosm/Makefile: Fix CPPFLAGS.
	* test/Makefile: Fix CPPFLAGS.
	* test/asmtest.c: No osm_dump.
	* test/sizes.c: Fix BUILD_PLATFORM.
	* tools/Makefile: Fix CPPFLAGS.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* configure.in: 0.9.0 for the ASM half-change.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* Makefile: Change RPM specfile names.
	* configure.in: Change specfile names.
	* redhat/Makefile: Reference new specfile names.
	* redhat/{osm,oracleasm}-2.4.{9-e,21-EL}.spec.in: Rename.  Fix
		all package names.
	* redhat/{osm,oracleasm}.init: Rename.  Fix module names.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}abi.h: Rename osmdisk.h to asmabi.h.
	* include/linux/Makefile: Reference asmabi.h.
	* kernel/oracleasm.c: Reference asmabi.h.
	* kernel/Makefile: Reference asmabi.h.
	* libosm/asmlib.c: Reference asmabi.h.
	* libosm/Makefile: Reference asmabi.h.
	* test/asmbad.c: Reference asmabi.h.
	* test/sizes.c: Reference asmabi.h.
	* test/Makefile: Reference asmabi.h.
	* tools/Makefile: Drop useless reference to osmabi.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}disk.h: Rename osmdisk.h to asmdisk.h.
	* include/linux/Makefile: Reference asmdisk.h.
	* kernel/oracleasm.c: Reference asmdisk.h.
	* kernel/Makefile: Reference asmdisk.h.
	* libosm/asmlib.c: Drop useless reference to osmdisk.h.
	* libosm/Makefile: Drop reference to osmdisk.h.
	* test/asmbad.c: Reference asmdisk.h.
	* tools/Makefile: Reference asmdisk.h.
	* tools/asmtool.c: Reference asmdisk.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}compat32.h: Rename osmcompat32.h to