@@ -41,6 +41,8 @@ LDFLAGS = @LDFLAGS@
 
 DEFS = @DEFS@
 
+M64 = @M64@
+USERM64 = @USERM64@
 MCMODEL = @MCMODEL@
 
 TOOLSARCH = @TOOLSARCH@
