@@ -49,19 +49,36 @@ AC_PATH_PROG(AR, ar)
 AC_HEADER_STDC
 AC_C_CONST
 
+AC_ARG_ENABLE(force32,
+              [  --enable-force32    Force building a 32bit library on a 64bit platform],
+              force32="$enableval",
+              force32="no")
+
+MCMODEL=""
+M64=""
+USERM64=""
 case "$host_cpu" in
 x86_64)
     MCMODEL="-mcmodel=kernel"
     ;;
 ppc64|powerpc64|ppc64iseries|ppc64pseries)
-    CFLAGS="$CFLAGS -m64"
+    M64="-m64"
+    echo "Force32 -> \"$force32\""
+    case "$force32" in
+    yes|true|on)
+        ;;
+    *)
+        USERM64="$M64"
+        ;;
+    esac
     ;;
 *)
-    MCMODEL=""
     ;;
 esac
 
 AC_SUBST(MCMODEL)
+AC_SUBST(M64)
+AC_SUBST(USERM64)
 
 AC_MSG_CHECKING(build architectures)
 TOOLSARCH=
@@ -136,6 +153,8 @@ fi
 
 saved_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="-I$KERNELINC $CPPFLAGS"
+saved_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS $M64"
 
 AC_MSG_CHECKING(for kernel version)
 rm -f conf.kvertest
@@ -209,6 +228,7 @@ fi
 AC_SUBST(MODVERSIONS)
 
 CPPFLAGS="$saved_CPPFLAGS"
+CFLAGS="$saved_CFLAGS"
 
 AC_MSG_CHECKING(for directory for kernel modules)
 AC_ARG_WITH(moddir, [  --with-moddir=/path     Path to where modules should be installed [/lib/modules/<KVER>/fs]], moddir="$withval", moddir="/lib/modules/$kversion/kernel/fs")
