@@ -6,7 +6,7 @@ SBIN_PROGRAMS = asmtool
 
 VERSION_FLAGS = -DVERSION="\"${VERSION}\""
 CPPFLAGS += -DLINUX ${VERSION_FLAGS} $(DEFS)
-CFLAGS += -Wall
+CFLAGS += -Wall $(USERM64)
 
 INCLUDES = -I. -I$(TOPDIR)/include
 
