@@ -1,4 +1,13 @@
 
+2003-11-13	Joel Becker <joel.becker@oracle.com>
+
+	* configure.in: Added M64, USERM64, and --enable-force32.
+	* Config.make.in: Added M64, USERM64.
+	* kernel/Makefile: Added M64.
+	* {tools,test,libosm}: Added USERM64.
+	* kernel/oracleasm.c: sys_ioctl() prototype.
+	* test/sizes.c: Added ppc.
+
 2003-11-12	Joel Becker <joel.becker@oracle.com>
 
 	* kernel/oracleasm.c: Fix SuSE builds.
